# TradingBots

./: EMA.py  EMA2.py  EMA3.py  EMAML.py  MMxM.py  MMxMrev.py  README.md  Wicks.py  best_trading_model.pkl  enhanced_ml_trading.py  feature_scaler.pkl  pyproject.toml
